--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-
+# dependencies
 node_modules/
-frontend/node_modules/
-backend/node_modules/
+
+# env secrets
+.env
+**/.env
+
+# OS junk
+.DS_Store
+**/.DS_Store
+
+# build output (optional)
+dist
+dist-ssr
