--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
 # dependencies
 node_modules/
+**/node_modules/
 
-# env secrets
+# env secrets (never commit)
 .env
+.env.*
 **/.env
+**/.env.*
+!.env.example
 
 # OS junk
 .DS_Store
 **/.DS_Store
 
-# build output (optional)
+# build output
 dist
 dist-ssr
+**/dist
+**/dist-ssr
