--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand --detectOpenHandles --forceExit --testTimeout=30000"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
