--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,14 @@
   command = "npm ci && npm run build"
   publish = "dist"
 
+# ✅ Proxy API calls to Render (MUST be ABOVE the SPA redirect)
+[[redirects]]
+  from = "/api/*"
+  to = "https://lab-project-ysqu.onrender.com/api/:splat"
+  status = 200
+  force = true
+
+# ✅ SPA fallback (React Router)
 [[redirects]]
   from = "/*"
   to = "/index.html"
